MIDI files now download correctly.
The MIDI file format is correctly written by jiMIDIFile.js, and
a MIDI recording of Study 2 (unassisted) plays correctly in
Windows Media Player.
Known Bug: The offset time of subsequences needs to be taken into
account in assisted performances.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -17,17 +17,9 @@
 	<body
 		style="text-align:center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif;  ">
 		<div id="centredReferenceDiv" class="centredReference">
-            <p class="header1">Assistant Performer&nbsp;
-                <span style="color: #FF0000; font-size: 13px">(work in progress)</span>
-                <input 
-                    id="loadMIDIFileButton" 
-                    style="margin-right: 20px; margin-left: 20px; font-size: 12px; vertical-align: baseline;" 
-                    type="button" value="load MIDI test file"
-                    onclick="JI_NAMESPACE.midiFile.load('temp midi/FOUR.MID')" />
-                <input id="createSaveButtonButton" 
-                    style="margin-right: 20px; margin-left: 20px; font-size: 12px; vertical-align: baseline;" 
-                    type="button" value="create Save Button"
-                    onclick="JI_NAMESPACE.midiFile.createSaveButton()" /></p>
+            <p class="header1">Assistant Performer
+                <span style="color: #FF0000; font-size: 13px"> (work in progress)</span>
+            </p>
             <hr class="hrHeight1" />
             <div style="text-align: center">
                <a  
