Added comment to top of Assistant Performer
The comment says that the AP works on Chrome with the Jazz plugin (v1.2)

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -18,7 +18,11 @@
 		style="text-align:center; font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif;  ">
 		<div id="centredReferenceDiv" class="centredReference">
             <p class="header1">Assistant Performer
-                <span style="color: #FF0000; font-size: 13px"> (work in progress)</span>
+            <span style="font-family: Lucida Sans Unicode, Verdana, Arial, Geneva, Sans-Serif; color: #8888FF; font-size: 12px">
+            This page currently runs in the latest version of Chrome, with the <a href="http://jazz-soft.net">Jazz</a> 
+                plug-in (v 1.2) 
+                installed.</span>
+            <span style="color: #FF0000; font-size: 13px"> (work in progress)</span>    
             </p>
             <hr class="hrHeight1" />
             <div style="text-align: center">
@@ -30,7 +34,7 @@
                     <div style="font-size: 14px;">
                         options
                     </div>
-                    <div class="helpColour ">
+                    <div class="helpColour">
                         MIDI devices will only be recognized if they are connected and switched on before loading this page.
                     </div>
                     <div style="margin-top:6px">
