--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -498,6 +498,8 @@
     <script src="js/jiJazzWebMIDIAPI.js" type="text/javascript"></script>
 
     <script src="js/jiNamespace.js" type="text/javascript"></script>
+
+    <script src="js/jiMIDIEvent.js" type="text/javascript"></script>
     <script src="js/jiFile.js" type="text/javascript"></script>
     <script src="js/jiMarkers.js" type="text/javascript"></script>
     <script src="js/jiPalettes.js" type="text/javascript"></script>
