File reorganisation: JazzWebMIDI and Sequence to lib
I've decided to put all files that can be reused in future MIDI
projects in the lib directory.
Created a new file (a stub) lib/jiJazzWebMIDI.js defining the
webMIDI namespace and having an API identical to the current
Web MIDI API as described at the W3C. Will complete this with the
help of JazzMIDIBridge and WebMIDIAPIShim code.
Other files in lib may end up in a standard library when browsers
implement the Web MIDI API.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -491,37 +491,24 @@
 			    </div>
 </div>
 
-<!--
-    <script src="lib/JazzMIDIBridge.js" type="text/javascript"></script>
-    <script src="lib/MIDIDeviceSelector.js" type="text/javascript"></script>
--->
-    <script src="js/jiJazzWebMIDIAPI.js" type="text/javascript"></script>
 
-    <script src="js/jiNamespace.js" type="text/javascript"></script>
+    <script src="lib/jiNamespace.js" type="text/javascript"></script>
+    <script src="lib/jiJazzWebMIDI.js" type="text/javascript"></script>
+    <script src="lib/jiMIDIEvent.js" type="text/javascript"></script>
+    <script src="lib/jiSequence.js" type="text/javascript"></script>
+    <script src="lib/jiSMFToSequence.js" type="text/javascript"></script>
+    <script src="lib/jiSequenceToSMF.js" type="text/javascript"></script>
 
-    <script src="js/jiMIDIEvent.js" type="text/javascript"></script>
     <script src="js/jiFile.js" type="text/javascript"></script>
     <script src="js/jiMarkers.js" type="text/javascript"></script>
     <script src="js/jiPalettes.js" type="text/javascript"></script>
     <script src="js/jiMIDIMoment.js" type="text/javascript"></script>
     <script src="js/jiTrack.js" type="text/javascript"></script>
     <script src="js/jiMIDIChord.js" type="text/javascript"></script>
-    <script src="js/jiSequence.js" type="text/javascript"></script>
     <script src="js/jiAssistant.js" type="text/javascript"></script>
     <script src="js/jiScore.js" type="text/javascript"></script>
     <script src="js/jiAPTracksControl.js" type="text/javascript"></script>
-    <script src="js/jiMIDIFile.js" type="text/javascript"></script>
     <script src="js/jiAPControls.js" type="text/javascript"></script>
-
-    <!--
-    <script src="js/jiFile.js" type="text/javascript"></script>
-    <script src="js/jiMidi.js" type="text/javascript"></script>
-   
-    <script src="js/jiMarker.js" type="text/javascript"></script>
-    <script src="js/jiMidiControl.js" type="text/javascript"></script>
-    <script src="js/jiStudy%202c3.1threshold50msBase64.js" type="text/javascript"></script>
-    -->
-
     <script src="js/jiMain.js" type="text/javascript"></script>
     
     </body>
