Added JSLint directives; MIDI Input events now working.
Known Bug: (Todo next) lib/Sequence is not working. Problem is with 'this'.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -494,7 +494,7 @@
 
     <script src="lib/Namespace.js" type="text/javascript"></script>
 
-    <script src="lib/jiWebMIDIAPI.js" type="text/javascript"></script>
+    <script src="lib/JazzWebMIDIAPI.js" type="text/javascript"></script>
     
     <script src="lib/Event.js" type="text/javascript"></script>
     <script src="lib/Moment.js" type="text/javascript"></script>
