Small error correction in HTML

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -229,7 +229,7 @@
                 </div>
                 </div>
 
-    <div id="controlPanel" style="padding:0px; margin:0px; width:1042px; height:41; position: absolute; top: 540px;">
+    <div id="controlPanel" style="padding:0px; margin:0px; width:1042px; height:41px; position: absolute; top: 540px;">
         <svg xmlns="http://www.w3.org/2000/svg" width="170" height="36" style="position: absolute; left: 428px; top: 5px; ">
     <g id="performanceButtons" transform="translate(0.5, 0.5)">
         <rect id="performanceButtonsFrame" x="0" y="0" width="169" height="30" stroke="#008000" stroke-width="1" fill="#F5FFF5" />
