--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -496,6 +496,7 @@
 
     <script src="lib/JazzWebMIDIAPI.js" type="text/javascript"></script>
     
+    <script src="lib/Constants.js" type="text/javascript"></script>
     <script src="lib/Event.js" type="text/javascript"></script>
     <script src="lib/Moment.js" type="text/javascript"></script>
     <script src="lib/Track.js" type="text/javascript"></script>
