--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -47,6 +47,7 @@
                             <option>choose a score</option>
                             <option>Study 2c3.1</option>
                             <option>Study 3 sketch 1</option>
+                            <option>Song 6 sketch</option>
                         </select>
                         <select id="midiOutputDeviceSelector"
 					        name="midiOutputDeviceSelector"
@@ -497,7 +498,7 @@
 
     <script src="midiLib/Namespace.js" type="text/javascript"></script>
 
-    <script src="midiLib/JazzWebMIDIAPI.js" type="text/javascript"></script>
+    <script src="midiLib/WebMIDIAPI.js" type="text/javascript"></script>
     
     <script src="midiLib/Constants.js" type="text/javascript"></script>
     <script src="midiLib/Message.js" type="text/javascript"></script>
@@ -507,7 +508,6 @@
     <script src="midiLib/StandardMIDIFile.js" type="text/javascript"></script>
 
     <script src="ap/Namespace.js" type="text/javascript"></script>
-    <script src="ap/File.js" type="text/javascript"></script>
     <script src="ap/Markers.js" type="text/javascript"></script>
     <script src="ap/Palettes.js" type="text/javascript"></script>
     <script src="ap/MIDIChord.js" type="text/javascript"></script>
