Changed the title of "Song 6 Sketch" to "Song Six"

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -47,7 +47,7 @@
                             <option>choose a score</option>
                             <option>Study 2c3.1</option>
                             <option>Study 3 sketch 1</option>
-                            <option>Song 6 sketch</option>
+                            <option>Song Six</option>
                         </select>
                         <select id="midiOutputDeviceSelector"
 					        name="midiOutputDeviceSelector"
