--- a/scores/Song Six/Song Six.html
+++ b/scores/Song Six/Song Six.html
@@ -4,7 +4,7 @@
 	lang="en"
 	xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 	<head>
-		<title>Song 6 sketch</title>
+		<title>Song Six</title>
 		<link
 			href="http://james-ingram-act-two.de/fontsStyleSheet.css"
 			media="all"
@@ -20,14 +20,14 @@
 				id="svgPages"
 				style="line-height: 0px;">
 				<embed
-					src="Song 6 sketch page 1.svg"
+					src="Song Six page 1.svg"
 					content-type="image/svg+xml"
 					class="svgPage"
 					width="1010"
 					height="1237" />
 				<br />
 				<embed
-					src="Song 6 sketch page 2.svg"
+					src="Song Six page 2.svg"
 					content-type="image/svg+xml"
 					class="svgPage"
 					width="1010"
