--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -516,6 +516,7 @@
     <script src="ap/Assistant.js" type="text/javascript"></script>
     <script src="ap/Score.js" type="text/javascript"></script>
     <script src="ap/TracksControl.js" type="text/javascript"></script>
+    <script src="ap/ScoreConstants.js" type="text/javascript"></script>
     <script src="ap/Controls.js" type="text/javascript"></script>
     <script src="ap/Main.js" type="text/javascript"></script>
     
