Minor bug fixes in assistantPerformerStyleSheet.cs
Added pages 4-7 of Song Six.

--- a/scores/Song Six/Song Six.html
+++ b/scores/Song Six/Song Six.html
@@ -40,6 +40,34 @@
 					width="1010"
 					height="1237" />
 				<br />
+				<embed
+					src="Song Six page 4.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1010"
+					height="1237" />
+				<br />
+				<embed
+					src="Song Six page 5.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1010"
+					height="1237" />
+				<br />
+				<embed
+					src="Song Six page 6.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1010"
+					height="1237" />
+				<br />
+				<embed
+					src="Song Six page 7.svg"
+					content-type="image/svg+xml"
+					class="svgPage"
+					width="1010"
+					height="1237" />
+				<br />
 			</div>
 		</div>
 	</body>
