The startRuntimeButton's text now changes.
To complement the disabled status of the button, its
text now changes to one of the values 'not ready',
'Start' or 'Running'. 'Start' is displayed whenever
the button is enabled..
I tried very hard to display a 'wait' cursor, change
the button's text to 'processing...', or display an
image somewhere during the button's onclick() function (i.e. while the MIDI sequence is being
constructed), but without success.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -229,9 +229,9 @@
                             </div>
                         </div>
                     </div>                     
-                    <input id="startRuntimeButton" type="button" value="Start"
+                    <input id="startRuntimeButton" type="button" value="not ready"
                         onclick="_AP.controls.beginRuntime()"  disabled="disabled"               
-                        style="margin-top:8px; font-size: 14px; width: 100px; height: 24px;"/>    
+                        style="margin-top:8px; font-size: 13px; width: 100px; height: 24px;"/>    
                 </div>
                 </div>
 
