Adjusted the variable speed option again
The speed stored in the score is now performed
when middle C (C5, MidiNote 60) is played.
Speed changes are such that the speed is halved
two octaves lower (C3), and doubled two octaves
higher (C7).

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -221,10 +221,10 @@
                                 onchange="_AP.controls.doControl('assistantUsesRelativeDurationsRadioButton')"/>
                                 <label id="assistantUsesRelativeDurationsRadioButtonLabel" for="assistantUsesRelativeDurationsRadioButton">
                                     Variable Speed: The assistant's durations will be affected both by the above speed factor<br />
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and by the pitch played by the live performer. The live performer plays pitches in the range<br />
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;C0..B4 (MIDI pitches 0..59) to achieve a range of speeds between 50% and 200% of the original.<br />
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;At the bottom of the scale, at C0, the performed speed is halved. In the middle, at F#3, the<br />
-                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;speed is unchanged. At the top, B5 the speed is doubled.<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;and by the note played by the live performer. If the live performer plays a middle C<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;(C5, MIDI Note 60), the performed speed will be the default speed stored in the score.<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Playing lower or higher keys results in lower or higher speeds respectively.<br />
+                                    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Two octaves lower (C3) the speed is halved. Two octaves higher (C7) it is doubled.<br />
                                 </label> 
                             </div>
                         </div>
