--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -307,7 +307,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                         <option id="choose a score, nPages=0, nTracks=0">choose a score</option>
                         <option id="Study 2c3.1, nPages=3, nTracks=3">Study 2c3.1</option>
                         <option id="Study 3 sketch 1, nPages=2, nTracks=8">Study 3 sketch 1</option>
-                        <option id="Song Six, nPages=7, nTracks=6, po.pressure.otherTracks, po.pressure.selectedIndex=6, po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=2, po.modWheel.otherTracks, po.modWheel.selectedIndex=6">Song Six</option>
+                        <option id="Song Six, nPages=7, nTracks=6, po.pressure.otherTracks, po.pressure.selectedIndex=4, po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=2">Song Six</option>
                         <!-------------------------------------------------------------------------------------
                             See getScoreInfo() in Controls.js. for a description of how to set the above id strings.
                             The Performance Options (po.) and Assistant's Duration Options (ado.) are optional.
