Control substitution selectors are now visible/hidden
The selectors (in the performers options on the front
page) are now visible/hidden. They were previously
enabled/disabled.

--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -405,8 +405,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                                 tracks                                      
                                             </div>
                                             <div style="display: table-cell;">
-                                                &nbsp;
-                                       
+                                                &nbsp;                                      
                                             </div>
                                         </div>
                                         <div style="margin-left: 20px; line-height: 16px; display: table-row; vertical-align: middle">
@@ -422,7 +421,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                                     onclick="_AP.controls.doControl('usesPressureOtherTracksCheckbox')" disabled="disabled" />
                                             </div>
                                             <div style="display: table-cell;">
-                                                <select id="pressureSubstituteControlDataSelector" class="midiControlSelector" disabled="disabled"
+                                                <select id="pressureSubstituteControlDataSelector" class="midiControlSelector"
                                                     onchange="_AP.controls.doControl('pressureSubstituteControlDataSelector')">
                                                 </select>
                                             </div>
@@ -440,7 +439,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                                     onclick="_AP.controls.doControl('usesPitchBendOtherTracksCheckbox')" disabled="disabled" />
                                             </div>
                                             <div style="display: table-cell;">
-                                                <select id="pitchBendSubstituteControlDataSelector" class="midiControlSelector" disabled="disabled"
+                                                <select id="pitchBendSubstituteControlDataSelector" class="midiControlSelector"
                                                     onchange="_AP.controls.doControl('pitchBendSubstituteControlDataSelector')">
                                                 </select>
                                             </div>
@@ -458,7 +457,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                                     onclick="_AP.controls.doControl('usesModOtherTracksCheckbox')" disabled="disabled" />
                                             </div>
                                             <div style="display: table-cell;">
-                                                <select id="modSustituteControlSelector" class="midiControlSelector" disabled="disabled"
+                                                <select id="modSustituteControlSelector" class="midiControlSelector"
                                                     onchange="_AP.controls.doControl('modSustituteControlSelector')">
                                                 </select>
                                             </div>
