--- a/assistantPerformer.html
+++ b/assistantPerformer.html
@@ -307,7 +307,7 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                         <option id="choose a score, nPages=0, nTracks=0">choose a score</option>
                         <option id="Study 2c3.1, nPages=3, nTracks=3">Study 2c3.1</option>
                         <option id="Study 3 sketch 1, nPages=2, nTracks=8">Study 3 sketch 1</option>
-                        <option id="Song Six, nPages=7, nTracks=6, po.pressure.minimum=50, po.pressure.otherTracks, po.pressure.selectedIndex=4, po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=2">Song Six</option>
+                        <option id="Song Six, nPages=7, nTracks=6, po.pressure.minimum=40, po.pressure.otherTracks, po.pressure.selectedIndex=4, po.pitchWheel.otherTracks, po.pitchWheel.selectedIndex=2">Song Six</option>
                         <!-------------------------------------------------------------------------------------
                             See getScoreInfo() in Controls.js. for a description of what these id string options mean and how to set them.
                             The Performance Options (po.) and Assistant's Duration Options (ado.) are optional.
@@ -404,8 +404,20 @@ xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
                                                 other<br />
                                                 tracks                                      
                                             </div>
-                                            <div style="display: table-cell;">
-                                                &nbsp;                                      
+                                            <div style="display: table">
+                                                <div id="minPressureDiv" style="display: table-row; text-align:right; visibility:hidden;">
+                                                    <div class="checkboxCell">
+                                                        &nbsp;
+                                                    </div>
+                                                    <div class="checkboxCell" style="width: 50px; text-align:right;">
+                                                        minimum<br />
+                                                        pressure                                      
+                                                    </div>
+                                                    <div class="checkboxCell">
+                                                        <input type="text" id="minPressureInputText" value="127"
+                                                            style="padding: 0px; margin: 8px 0px 0px 0px; width: 30px; vertical-align: middle; font-size: 11px;">
+                                                    </div>
+                                                </div>
                                             </div>
                                         </div>
                                         <div style="margin-left: 20px; line-height: 16px; display: table-row; vertical-align: middle">
